  combination of numerical types (int,float,Gmp.mpq,Gmp.mpf,Gmp.mpz)

  `** and ``** operator overloading functions added.

  This introduces one incompatible change: Previously the "pow"
  function called a "_pow" function in the first argument if it was an
  object. It has now been changed to also use `** (or, rather, pow()
  is now implemented using predef::`**()).

o #pragma disassemble

  The byte code output is now interleaved with the generated machine code
  on selected architectures.

o Complain about redundant backslash escapes.

o '__weak__' modifier added.

  It is now possible to declare object variables to have weak references.

o Support for arguments to implicit lambdas added.

  Implicit lambdas now behave as if they were declared as
  lambda(mixed ... __ARGS__).

o Function local function declarations are now statements
  (and not expressions). This means that there is no longer
  any need to terminate them with a semicolon.

o Complain about shadowed variant functions.

o Machine code support for more architectures.

  There's now machine code support for arm32 and arm64.

o Fixed multiple integer over- and underflow bugs.

o Extended sscanf %O

  sscanf() is now able to parse all base types that sprintf %O can
  output. It can now also parse most literal constants pike accepts,
  including integers prefixed with 0x and 0b, and floating point
  numbers in scientific notation.


Bug fixes
---------

o Operator functions

  Calling operator functions with more than two arguments will now
  work correctly for objects, where previously only the first two
  objects where added.

  When adding arrays, multisets and mappings, UNDEFINED will now
  always be ignored. Previously it was only ignored when first in the
  argument list, otherwise an exception would be thrown.

  The LFUNs will now be called with a consistent number of
  arguments. Pike implementations rarely implemented varargs on